# puyo-embedded-system

./: .gitignore  .project  Board.java  Puyo.java  PuyoQueue.java  README.md  assignment05.ipynb  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/puyo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: 7_segment_test.c  8_LED_test.c  9_button_test.c  CMakeLists.txt  dot_matrix_test.c  text_LCD_test.c
app/src/main/java/com/example/puyo/: Board.java  ClientActivity.java  ClientThread.java  MainActivity.java  MenuActivity.java  MultiActivity.java  Players2Activity.java  Players3Activity.java  Players4Activity.java  Puyo.java  PuyoQueue.java  Room.java  RoomActivity.java  ServerActivity.java  ServerThread.java  SimpleClientActivity.java  SimpleServerActivity.java  SinglePlay.java  componentArray.java
app/src/main/res/layout/: main.xml  main_activity.xml  make_a_room.xml  menu.xml  players2.xml  players3.xml  players4.xml  single_play.xml  try_to_join.xml  type_of_game.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/puyo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
